@@ -1,0 +1,153 @@
+page:
+  size: a4
+  orientation: portrait
+  margin:
+    top: 10
+    left: 10
+    bottom: 10
+    right: 10
+  header_height: 0
+  footer_height: 0
+content:
+  type: group
+  title:
+    type: label
+    label: "タイトル文字列"
+    region:
+      x: 10
+      y: 10
+      width: 100
+      height: 20
+    color:
+      red: 0
+      green: 0
+      blue: 0
+  line01:
+    type: line
+    start:
+      x: 10
+      y: 10
+    end:
+      x: 100
+      y: 10
+  line02:
+    type: line
+    start:
+      x: 10
+      y: 10
+    end:
+      x: 110
+      y: 110
+    color:
+      red: 1
+      green: 0
+      blue: 0
+  rectangle01:
+    type: rectangle
+    region:
+      x: 120
+      y: 0
+      width: 10
+      height: 5
+    line_color:
+      red: 0
+      green: 0.3
+      blue: 0
+    line_width: 3
+    fill_color:
+      red: 0
+      green: 1
+      blue: 1
+  rectangle02:
+    type: rectangle
+    region:
+      x: 10
+      y: 10
+      width: 100
+      height: 100
+    line_width: 1
+    line_color:
+      red: 1
+      green: 0
+      blue: 0
+    fill_color:
+      red: 1
+      green: 1
+      blue: 1
+  rect1:
+    type: rectangle
+    region:
+      x: 0
+      y: 0
+      width: 10
+      height: 10
+  rect2:
+    type: rectangle
+    region:
+      x: 10
+      y: 10
+      width: 10
+      height: 10
+  # arc_rect_rect:
+  #   type: rectangle
+  #   region:
+  #     x: 50
+  #     y: 200
+  #     width: 100
+  #     height: 30
+  #   line_color:
+  #     red: 0
+  #     green: 0
+  #     blue: 1
+  arc_rect:
+    type: arc_rectangle
+    line_width: 10
+    region:
+      x: 50
+      y: 200
+      width: 100
+      height: 30
+    line_color:
+      red: 1
+      green: 0
+      blue: 1
+    fill_color:
+      red: 0
+      green: 1
+      blue: 1
+    round_arc: 5
+  control_visible_line:
+    type: line
+    start:
+      x: 150
+      y: 100
+    end:
+      x: 150
+      y: 150
+    control_visible: true
+  control_visible_rect:
+    type: rectangle
+    region:
+      x: 160
+      y: 100
+      width: 10
+      height: 10
+    control_visible: true
+  control_visible_arcrect:
+    type: arc_rectangle
+    line_width: 10
+    region:
+      x: 160
+      y: 110
+      width: 30
+      height: 30
+    line_color:
+      red: 1
+      green: 0
+      blue: 1
+    fill_color:
+      red: 0
+      green: 1
+      blue: 1
+    round_arc: 5
+    control_visible: true
