@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 # Line クラスのソースファイル
 # Author:: maki-tetsu
 # Date:: 2011/03/11
@@ -17,10 +18,11 @@ module PREP # nodoc
       }
 
       @@default_values = {
-        :color => { :red => 0, :green => 0, :blue => 0 },
-        :width => 1,
-        :style => STYLES[:solid],
-        :layer => 2,
+        :color           => { :red => 0, :green => 0, :blue => 0 },
+        :width           => 1,
+        :style           => STYLES[:solid],
+        :layer           => 2,
+        :control_visible => false,
       }
 
       attr_reader :start_point, :end_point, :color, :width, :style
@@ -34,6 +36,7 @@ module PREP # nodoc
         @color = Color.new(values[:color][:red], values[:color][:green], values[:color][:blue])
         self.width = values[:width]
         self.style = values[:style]
+        @control_visible = values[:control_visible]
       end
 
       def width=(w)
@@ -67,27 +70,31 @@ module PREP # nodoc
       end
 
       # 直線の描画
-      def draw(prep, region, values, stop_on_drawable = nil)
+      def draw(prep, region, value, stop_on_drawable = nil)
         if self === stop_on_drawable
           raise ReRenderJump.new(region)
         end
         STDERR.puts("Draw on #{self.class} #{self.identifier}") if ENV['DEBUG']
         # 領域判定
-        calculate_region(prep, region, values)
-        # 幅指定
-        prep.current_page.set_line_width(@width)
-        # 色指定
-        prep.current_page.set_rgb_stroke(@color.red.to_f,
-                                         @color.green.to_f,
-                                         @color.blue.to_f)
-        # 開始位置へ移動
-        start_x, start_y = calculate_pos(prep.current_page, region, @start_point.x.to_f, @start_point.y.to_f)
-        end_x, end_y = calculate_pos(prep.current_page, region, @end_point.x.to_f, @end_point.y.to_f)
-        prep.current_page.move_to(start_x, start_y)
-        # 終了位置へ向けて直線描画
-        prep.current_page.line_to(end_x, end_y)
-        # 実描画
-        prep.current_page.stroke
+        calculate_region(prep, region, value)
+
+        if visible?(value)
+          # 幅指定
+          prep.current_page.set_line_width(@width)
+          # 色指定
+          prep.current_page.set_rgb_stroke(@color.red.to_f,
+                                           @color.green.to_f,
+                                           @color.blue.to_f)
+          # 開始位置へ移動
+          start_x, start_y = calculate_pos(prep.current_page, region, @start_point.x.to_f, @start_point.y.to_f)
+          end_x, end_y = calculate_pos(prep.current_page, region, @end_point.x.to_f, @end_point.y.to_f)
+          prep.current_page.move_to(start_x, start_y)
+          # 終了位置へ向けて直線描画
+          prep.current_page.line_to(end_x, end_y)
+          # 実描画
+          prep.current_page.stroke
+        end
+
         prep.current_page.drawed = true
       end
     end
